src/objects/Product_Pkg__c.object
<CustomObject>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Pkg_Size__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <referenceTo>Pkg_Size__c</referenceTo>
        <relationshipLabel>Product-Pkg</relationshipLabel>
        <relationshipName>Product_Pkg</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product-Pkg</relationshipLabel>
        <relationshipName>Product_Pkg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Pkg_Size__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <label>Product-Pkg</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPKG-{0000000000}</displayFormat>
        <label>Product-Pkg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product-Pkg</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>